--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 ```
 # survParamSim
 
+[![Travis build status](https://travis-ci.org/yoshidk6/survParamSim.svg?branch=master)](https://travis-ci.org/yoshidk6/survParamSim)
+
 The goal of survParamSim is to perform survival simulation with parametric survival model generated from 'survreg' function in 'survival' package.
 
 Outputs include prediction intervals of Kaplan-Meier estimates and hazard ratio of treatment effect.
