Add N per group for calc_km_pi summary
Not adding this to hr_pi, because coxph does not return n per group

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,9 @@ newdata <-
   lung %>% 
   dplyr::filter(!is.na(ph.ecog), ph.ecog <= 2)
 
-sim <- surv_param_sim(object = fit.lung, newdata = newdata)
+sim <- surv_param_sim(object = fit.lung, newdata = newdata, 
+                      # Simulating only 100 times to make the example go fast
+                      n.rep = 100)
 
 sim
 ```
