--- a/README.Rmd
+++ b/README.Rmd
@@ -39,46 +39,72 @@ This is a basic example which shows you how to solve a common problem.
 
 First, run survreg to fit parametric survival model:
 
-```{r fit}
+```{r prep}
+library(dplyr)
+library(ggplot2)
 library(survival)
 library(survParamSim)
 
 set.seed(12345)
 
-fit.lung <- survreg(Surv(time, status) ~ sex, data = lung)
+# ref for dataset https://vincentarelbundock.github.io/Rdatasets/doc/survival/colon.html
+colon2 <- 
+  as_tibble(colon) %>% 
+  # recurrence only and not including Lev alone arm
+  filter(rx != "Lev",
+         etype == 1) %>% 
+  # Same definition as Lin et al, 1994
+  mutate(rx = factor(rx, levels = c("Obs", "Lev+5FU")),
+         depth = as.numeric(extent <= 2))
+```
+  
+```{r fit}
+fit.colon <- survreg(Surv(time, status) ~ rx + node4 + depth, 
+                     data = colon2, dist = "lognormal")
 
-fit.lung
+summary(fit.colon)
 ```
 
 Next, run parametric bootstrap simulation:
 
 ```{r sim}
-# Remove a few subjects for later plotting purpose
-newdata <- 
-  lung %>% 
-  dplyr::filter(!is.na(ph.ecog), ph.ecog <= 2)
-
-sim <- surv_param_sim(object = fit.lung, newdata = newdata, 
+sim <- surv_param_sim(object = fit.colon, newdata = colon2, 
                       # Simulating only 100 times to make the example go fast
                       n.rep = 100)
 
 sim
 ```
 
-Calculate survival curves with prediction intervals
+Calculate survival curves with prediction intervals:
 
 ```{r km_pi}
-km.pi <- calc_km_pi(sim, trt = "sex", group = c("ph.ecog"))
+km.pi <- calc_km_pi(sim, trt = "rx")
 
 km.pi
 plot_km_pi(km.pi) +
-  ggplot2::theme(legend.position = "bottom")
+  theme(legend.position = "bottom") +
+  labs(y = "Recurrence free rate") +
+  expand_limits(y = 0)
+```
+
+Plot can be made for subgroups.  
+You can see that prediction interval is wide for depth: 1 and nodes4: 1 group, mainly due to small number of subjects
+
+```{r km_pi_group}
+km.pi <- calc_km_pi(sim, trt = "rx", group = c("node4", "depth"))
+
+plot_km_pi(km.pi) +
+  theme(legend.position = "bottom") +
+  labs(y = "Recurrence free rate") +
+  expand_limits(y = 0)
 ```
 
 Calculate hazard ratios with prediction intervals:
 
+You can again see the wide prediction interval for depth: 1 and nodes4: 1 group
+
 ```{r hr_pi}
-hr.pi <- calc_hr_pi(sim, trt = "sex", group = c("ph.ecog"))
+hr.pi <- calc_hr_pi(sim, trt = "rx", group = c("node4", "depth"))
 
 hr.pi
 plot_hr_pi(hr.pi)
