--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ install.packages("survParamSim")
 
 ## Example
 
-[This GitHub pages](https://yoshidk6.github.io/survParamSim) contains function references and [vignette](https://yoshidk6.github.io/survParamSim/articles/survParamSim.html).
+[This GitHub pages](https://yoshidk6.github.io/survParamSim/) contains function references and [vignette](https://yoshidk6.github.io/survParamSim/articles/survParamSim.html).
 The example below is a sneak peek of example outputs. 
 
 First, run survreg to fit parametric survival model:
