--- a/README.Rmd
+++ b/README.Rmd
@@ -83,20 +83,20 @@ sim
 Calculate survival curves with prediction intervals:
 
 ```{r km_pi_group}
-km.pi <- calc_km_pi(sim, trt = "rx", group = c("node4", "depth"))
+km.pi <- calc_ave_km_pi(sim, trt = "rx", group = c("node4", "depth"))
 
 km.pi
 plot_km_pi(km.pi) +
   theme(legend.position = "bottom") +
   labs(y = "Recurrence free rate") +
   expand_limits(y = 0)
-extract_medsurv_pi(km.pi)
+# extract_medsurv_pi(km.pi)
 ```
 
 Calculate hazard ratios with prediction intervals:
 
 ```{r hr_pi}
-hr.pi <- calc_hr_pi(sim, trt = "rx", group = c("depth"))
+hr.pi <- calc_ave_hr_pi(sim, trt = "rx", group = c("depth"))
 
 hr.pi
 plot_hr_pi(hr.pi)
